# cv-manager

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  PLAN.md  README.md  TRANSLATING.md  USER_GUIDE.md  demo-cv-data.json  docker-compose.unraid.yml  docker-compose.volume.yml  install.sh  mkdocs.yml  package-lock.json  package.json  version.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  desktop.yml
desktop/: README.md  build-sidecar.js  package-lock.json  package.json
docs/: index.de.md  index.es.md  index.fr.md  index.it.md  index.md  index.nl.md  index.pt.md  index.zh.md
docs/advanced/: ats.de.md  ats.es.md  ats.fr.md  ats.it.md  ats.md  ats.nl.md  ats.pt.md  ats.zh.md  index.de.md  index.es.md  index.fr.md  index.it.md  index.md  index.nl.md  index.pt.md  index.zh.md  security.de.md  security.es.md  security.fr.md  security.it.md  security.md  security.nl.md  security.pt.md  security.zh.md  settings.de.md  settings.es.md  settings.fr.md  settings.it.md  settings.md  settings.nl.md  settings.pt.md  settings.zh.md
docs/getting-started/: first-steps.de.md  first-steps.es.md  first-steps.fr.md  first-steps.it.md  first-steps.md  first-steps.nl.md  (+18 more)
public/: index.html
public-readonly/: index.html  robots.txt  sitemap.xml
src/: server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: backend.test.js  frontend.test.js
unraid/: unraid-cv-manager-admin.xml  unraid-cv-manager-public.xml
(+133 files in other folders)
