[package]
name = "cv-manager-desktop"
version = "0.1.0"
description = "CV Manager Desktop Application"
authors = ["CV Manager"]
edition = "2021"

[lib]
name = "cv_manager_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
